# SimpleFCplayer

./: CMakeLists.txt  README.md  cross.cmake  deplay.sh  glview.hpp  main.cpp  seg.glsl  veg.glsl
libfcav/: avRxCtrl.c  fcBrowse.h  fcReceiver.cpp  fcReceiver.h  rwInit.c  rwWrReg.c  ulib.c  ulib.h  ulibuser.h
src/: glad.c
